# INST-414-Personal-Project

./: Makefile  README.md  pyproject.toml  requirements.txt
Misinformation Analysis/: __init__.py  dataset.py  features.py  plots.py
Misinformation Analysis/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: models_sprint3.ipynb
notebooks/: sprint_3.ipynb
tests/: tests_sprint3.ipynb
